--- a/src/Components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/Components/ItemDetailContainer/ItemDetailContainer.css
@@ -7,3 +7,11 @@ min-height: 80vh;
 padding-top: 50px;
 padding-bottom: 50px;
 }
+
+.ComeBack {
+    margin-top: 10px;
+    color: #299199; 
+    background-color: white;
+    font-weight: bold;
+    border: none;
+}
