--- a/src/Components/ItemList/ItemList.css
+++ b/src/Components/ItemList/ItemList.css
@@ -1,6 +1,11 @@
 .ListGroup {
     justify-content: space-between;
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
+    width: 90%;
     padding: 0 35px;
+}
+
+.ListGroup .card {
+    margin-bottom: 16px;
 }
